--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,7 @@
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
 
-	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<!-- <version>8.0.11</version> -->
-	</dependency>
-
+	
 	<dependency>
 		<groupId>io.jsonwebtoken</groupId>
 		<artifactId>jjwt</artifactId>
@@ -52,12 +47,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.11</version>
+</dependency>
+		
+		
+<!-- <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency> 
+		</dependency -->
 	</dependencies>
 
 	<build>
